# pod-metrics

./: .env.example  .gitignore  Cargo.toml  README.md
deployment/: config-map.yaml  deployment.yaml  pod-metrics.yaml  secrets.yaml
image/: .dockerignore  Dockerfile
src/: config.rs  main.rs
src/kubernetes/: client.rs  errors.rs
src/metrics/: collector.rs  mod.rs  parsers.rs  types.rs
