[package]
name = "pod_metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
config = "0.13"
async-trait = "0.1"
chrono = "0.4"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16"
dashmap = "6.1.0"
thiserror = "2.0.9"
rustls = { version = "0.23", features = ["ring"] }
